# RealSocketDjangoChatApi

./: README.md  pyproject.toml  requirements.txt
chat/: consumers.py  serializers.py  views.py
chat/migrations/: 0001_initial.py
main/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
